[project]
authors = [{name = "Andre Medina", email = "AndreMedina@hotmail.com.au"}]
description = "Add a short description here"
name = "dagster_ui"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
dagster_ui = { path = ".", editable = true }

[tool.pixi.tasks]
tests = "pytest"
dagster = "echo '⚠️  RECOMEND USING THE VSC DEBUGGER INSTEAD ⚠️' && export DAGSTER_HOME=$PWD/.dagster && dagster dev -m dagster_ui"

[tool.pixi.dependencies]
pytest = "*"
pre-commit = ">=4.0.1,<5"
ipykernel = ">=6.29.5,<7"
dagster = ">=1.5.13,<2"
dagster-webserver = ">=1.5.13,<2"
